Fix spinner in lifelist table overlapping column titles (for narrow tables)

--- a/app/assets/stylesheets/public.sass
+++ b/app/assets/stylesheets/public.sass
@@ -260,6 +260,7 @@ h5.first_seen
       padding-bottom: 20px
 
 #lifelist.advanced
+  width: 100%
   td, th
     //border: 1px solid #CCCCCC
   td
@@ -283,7 +284,7 @@ h5.first_seen
   .spinner-img
     position: absolute
     left: 50%
-    padding-top: 10px
+    padding-top: 12px
 
 // Checklist table
 
